Add social media contact

--- a/index.html
+++ b/index.html
@@ -313,9 +313,23 @@
               <h4>Band</h4>
               <p>Sunwalk Avenue<br>
                 SUN, Band<br>
-                Chicago, US
+                Chicago,<br>
+                US
               </p>
             </address><!-- .font-italic -->
+            
+            <a class="px-2 py-3 text-decoration-none text-white" href="https://www.facebook.com" target="_blank">
+              <i class="fab fa-facebook-f" aria-hidden="true"></i>
+              <span class="sr-only">Facebook</span>
+            </a><!-- .text-decoration-none- -->
+            <a class="px-2 py-3 text-decoration-none text-white" href="https://www.twitter.com" target="_blank">
+              <i class="fab fa-twitter" aria-hidden="true"></i>
+              <span class="sr-only">Twitter</span>
+            </a><!-- .text-decoration-none- -->
+            <a class="px-2 py-3 text-decoration-none text-white" href="https://www.linkedin.com" target="_blank">
+              <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+              <span class="sr-only">LinkedIn</span>
+            </a><!-- .text-decoration-none- -->
           </section><!-- .col- -->
         </div><!-- .row -->
 
