--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               </form>
             </section><!-- .col-md-7 -->
 
-            <aside class="col-md-4 pt-4 pt-md-0 bg-primar">
+            <aside class="col-md-4 pt-4 pt-md-0">
               <h3 class="text-center">Advertisement:</h3>
               <a href="#">
                 <img class="img-fluid w-100 rounded" src="images/eugene-unsplash.jpg" alt="">
