Add aria-labelledby attribute values

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           </ul><!-- .nav-tabs -->
 
           <div class="tab-content" id="blogTabContent">
-            <section id="peter" class="tab-pane fade show active" id="peter" role="tabpanel" aria-labelledby="">
+            <section id="peter" class="tab-pane fade show active" id="peter" role="tabpanel" aria-labelledby="peter-tab">
               <h3 class="pt-3">Mick Ross, Manager</h3>
               <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -253,7 +253,7 @@
               </p>
             </section><!-- .tab-pane -->
 
-            <section id="joy" class="tab-pane fade" id="joy" role="tabpanel" aria-labelledby="">
+            <section id="joy" class="tab-pane fade" id="joy" role="tabpanel" aria-labelledby="joy-tab">
               <h3 class="pt-3">Mick Ross, Manager</h3>
               <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -265,7 +265,7 @@
               </p>
             </section><!-- .tab-pane -->
 
-            <section id="glory" class="tab-pane fade" id="glory" role="tabpanel" aria-labelledby="">
+            <section id="glory" class="tab-pane fade" id="glory" role="tabpanel" aria-labelledby="glory-tab">
               <h3 class="pt-3">Mick Ross, Manager</h3>
               <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
