Updates some images source paths

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-md-4">
               <section class="card mb-4">
                 <div class="card-body">
-                  <img class="card-img img-fluid" src="images/newyork.jpg" alt="">
+                  <img class="card-img img-fluid" src="images/newyork-img.jpg" alt="">
                   <div class="text-center">
                     <h3 class="card-title mb-0 pt-3">Paris</h3>
                     <p class="card-text">Wednesday 15th January, 2020</p>
@@ -155,7 +155,7 @@
             <div class="col-md-4">
               <section class="card mb-4">
                 <div class="card-body">
-                  <img class="card-img img-fluid" src="images/paris.jpg" alt="">
+                  <img class="card-img img-fluid" src="images/paris-img.jpg" alt="">
                   <div class="text-center">
                     <h3 class="card-title mb-0 pt-3">Paris</h3>
                     <p class="card-text">Wednesday 15th January, 2020</p>
@@ -168,7 +168,7 @@
             <div class="col-md-4">
               <section class="card mb-4">
                 <div class="card-body">
-                  <img class="card-img img-fluid" src="images/sanfran.jpg" alt="">
+                  <img class="card-img img-fluid" src="images/sanfran-img.jpg" alt="">
                   <div class="text-center">
                     <h3 class="card-title mb-0 pt-3">Paris</h3>
                     <p class="card-text">Wednesday 15th January, 2020</p>
